# SecureRAG

./: .env.example  .gitignore  README.md  app.py  flowsettings.py  launch.sh  mkdocs.yml  pyproject.toml  sso_app.py  sso_app_demo.py
docs/: rag-learning-notes.md
docs/development/: contributing.md  create-a-component.md
docs/integrations/: docling.md  paddle_ocr.md
docs/pages/app/: customize-flows.md  functional-description.md
docs/rag_practice/: access_control_policy.md  build_rag_eval_dataset.py  build_xinghe_eval_dataset.py  chunking_experiment_log.csv  employee_handbook.md  expense_policy.md  formal_eval_dataset.md  formal_rag_eval_examples.csv  lesson_01_testset_and_observation.md  lesson_02_chunking_experiment.md  lesson_02b_long_doc_pressure_test.md  lesson_03_retrieval_mode_experiment.md  lesson_04_query_rewrite_hyde.md  long_policy_mixed.md  long_policy_questions.csv  rag_test_questions.csv  retrieval_mode_experiment_log.csv  sync_eval_source_ids.py  xinghe_formal_eval_examples.csv
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  settings.ts  types.ts
frontend/src/components/: AppShell.tsx  ChatComposer.tsx  ChatSettingsPanel.tsx  ChatWorkspace.tsx  CitationCard.tsx  ConversationList.tsx  ConversationSwitcher.tsx  EmptyState.tsx  EvaluationWorkspace.tsx  FileWorkspace.tsx  HeaderNav.tsx  IconButton.tsx  MessageBubble.tsx  MessageList.tsx  ModelSettingsWorkspace.tsx  ReferencePanel.tsx  SelectField.tsx  Sidebar.tsx  SwitchField.tsx  TracePanel.tsx
frontend/src/styles/: global.css
libs/kotaemon/: pyproject.toml
libs/kotaemon/kotaemon/: cli.py
libs/kotaemon/tests/: conftest.py  test_agent.py  test_documents.py  test_indexing_retrieval.py  test_paddleocr_loader.py  test_reader.py  test_tools.py
libs/ktem/: pyproject.toml
scripts/permissions/: backfill_source_permissions.py
(+80 files in other folders)
