[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
packages.find.include = []

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"
dirty_template = "{tag}"
tag_filter = "v?\\d+(\\.\\d+)*.*"

[project]
name = "securerag"
dynamic = ["version"]
requires-python = ">= 3.10"
description = "Secure React-based RAG application with file permissions, tracing, and evaluation"
dependencies = [
    "kotaemon[all]",
    "ktem"
]
authors = [
    { name = "@trducng", email = "john@cinnamon.is" },
    { name = "@lone17", email = "ian@cinnamon.is" },
    { name = "@taprosoft", email = "tadashi@cinnamon.is" },
    { name = "@cin-albert", email = "albert@cinnamon.is" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
eval = [
    "datasets==5.0.0",
    "instructor==1.2.6",
    "openai<2",
    "ragas==0.4.3",
    "sentence-transformers",
    "tenacity>=8.2.3,<8.3",
]

[tool.uv.sources]
kotaemon = { workspace = true }
ktem = { workspace = true }

# uv workspace configuration
[tool.uv.workspace]
members = ["libs/kotaemon", "libs/ktem"]

[dependency-groups]
dev = [
    "black",
    "coverage",
    "flake8",
    "ipython",
    "pre-commit",
    "pytest",
    "pytest-mock",
    "sphinx"
]

[project.urls]
Homepage = "https://github.com/local/SecureRAG"
Repository = "https://github.com/local/SecureRAG"
Documentation = "https://github.com/local/SecureRAG#readme"

[tool.codespell]
skip = "*.js,*.css,*.map"
# `llm` abbreviation for large language models
ignore-words-list = "llm,fo"
quiet-level = 3
check-filenames = ""

[tool.isort]
known_first_party = ["kotaemon"]
